--- a/INSTALL
+++ b/INSTALL
@@ -1,33 +1,28 @@
-These is the install file for the Semantic Tasks extension.
-	
-Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:Semantic_Tasks
-Latest version of the install file: http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/SemanticTasks/INSTALL?view=co
+These is the install file for the Semantic Tasks extension. See also
+the extension's page on mediawiki.org:
 
+* https://www.mediawiki.org/wiki/Extension:Semantic_Tasks
 
 == Requirements ==
 
 Semantic Tasks requires:
 
-* MediaWiki 1.16 or above, 1.18 or above recommended
-* PHP 5.2 or above, 5.3 or above recommended
-* Semantic MediaWiki 1.5 or above, 1.7 or above recommended
+* MediaWiki 1.23 or above
+* PHP 5.3 or above
+* Semantic MediaWiki 1.7 or above
 
 == Download ==
 
-You can get the code directly from SVN. Tags can be obtained via
+You can get the code directly from Git. It can be obtained via
 
- svn checkout http://svn.wikimedia.org/svnroot/mediawiki/tags/extensions/SemanticTasks/REL_version
+ git clone https://gerrit.wikimedia.org/r/p/mediawiki/extensions/SemanticTasks.git
 
-Where 'version' is the version number of the tag, such as 0_1 (see the available tags at http://svn.wikimedia.org/svnroot/mediawiki/tags/extensions/SemanticTasks/).
-The latest code can be obtained from trunk:
-
- svn checkout http://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions/SemanticTasks/
+or use MediaWiki's extension distributor.
 
 == Installation ==
 
 Once you have downloaded the code, place the ''SemanticTasks'' directory within your MediaWiki
-'extensions' directory. Then add the following code to your [[Manual:LocalSettings.php|LocalSettings.php]] file:
+'extensions' directory. Then add the following code to your "LocalSettings.php" file:
 
 # Semantic Tasks
-require_once( "$IP/extensions/SemanticTasks/SemanticTasks.php" );
-      
+require_once "$IP/extensions/SemanticTasks/SemanticTasks.php";
