--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,22 +1,33 @@
-These are the release notes for the Semantic Tasks extension.
-	
-Extension page on mediawiki.org: https://www.mediawiki.org/wiki/Extension:Semantic_Tasks
-Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/SemanticTasks/RELEASE-NOTES?view=co
+These are the release notes for the Semantic Tasks extension. See also
+the extension's page on mediawiki.org:
 
-=== Version 1.6.0 ===
-2015-4-09
+* https://www.mediawiki.org/wiki/Extension:Semantic_Tasks
 
-* Made compatible with MediaWiki 1.24.
+== Version 1.7.0 ==
+Released on 2017-08-01
+
+* Removed I18n php shim
+* Dropped support for MediaWiki 1.22.x and earlier.
+
+== Version 1.6.0 ==
+Released on 2015-4-09
+
+* Made compatible with MediaWiki 1.24.x and later.
 * Removed deprecated code.
 * Added option to notify users when unassigned from a task.
 
-=== Version 1.4.1 ===
-2011-12-06
+== Version 1.5.0 ==
+Released on 2014-04-01
 
-* Added support for Semantic MediaWiki 1.7 and later.
+* Migrated to JSON i18n
+
+== Version 1.4.1 ==
+Released on 2011-12-06
+
+* Added support for Semantic MediaWiki 1.7.x and later.
 * Dropped support for MediaWiki 1.15.x and earlier.
 
-=== Version 1.4 ===
-June 2010
+== Version 1.4.0 ==
+Released in June 2010
 
 * Fixed bug that caused notifications to fail in non-main namespaces.
